fix spinner affichage et modif type spinner

--- a/index.html
+++ b/index.html
@@ -24,128 +24,128 @@
     </head>
 
      <!-- Homepage / Page d'acceuil du site Ohmyfood -->
-  <body>
-    <div class="loader"></div>
+    <body>
+        <div class="loader"><i class="fas fa-spinner"></i></div>
   
-    <div class="homepage">
-        <!-- Entete Ohmyfood -->
-        <header>
-            <h1>Ohmyfood</h1>
-        </header>
+        <div class="homepage">
+            <!-- Entete Ohmyfood -->
+            <header>
+                <h1>Ohmyfood</h1>
+            </header>
 
-        <!-- Zone Book the menu + How it works -->
-        <aside>
-            <div class="localisation">
-                <p><i class="fas fa-map-marker-alt"></i> Paris, Belleville</p>
-            </div>
+            <!-- Zone Book the menu + How it works -->
+            <aside>
+                <div class="localisation">
+                    <p><i class="fas fa-map-marker-alt"></i> Paris, Belleville</p>
+                </div>
 
-            <div class="btn_explore">
-                <h2>Book the menu you like</h2>
-                <p>Discover top-of-the-art restaurants we picked for you</p>
-                <a href="#restaurant_list">Explore our restaurants</a>
-            </div>
+                <div class="btn_explore">
+                    <h2>Book the menu you like</h2>
+                    <p>Discover top-of-the-art restaurants we picked for you</p>
+                    <a href="#restaurant_list">Explore our restaurants</a>
+                </div>
 
-            <div class="how_it_works">
-                <h2>How it works</h2>
-                <div class="btn_zone_hiw">
-                    <div class="btn_hiw">
-                        <span>1</span>
-                        <i class="fas fa-mobile-alt"></i> Chose a restaurant
-                    </div>
-                    <div class="btn_hiw">
-                        <span>2</span>
-                        <i class="fas fa-list-ul"></i> Create your menu
-                    </div>
-                    <div class="btn_hiw">
-                        <span>3</span>
-                        <i class="fas fa-store"></i> Go enjoy it at the restaurant
+                <div class="how_it_works">
+                    <h2>How it works</h2>
+                    <div class="btn_zone_hiw">
+                        <div class="btn_hiw">
+                            <span>1</span>
+                            <i class="fas fa-mobile-alt"></i> Chose a restaurant
+                        </div>
+                        <div class="btn_hiw">
+                            <span>2</span>
+                            <i class="fas fa-list-ul"></i> Create your menu
+                        </div>
+                        <div class="btn_hiw">
+                            <span>3</span>
+                            <i class="fas fa-store"></i> Go enjoy it at the restaurant
+                        </div>
                     </div>
                 </div>
-            </div>
-        </aside>
+            </aside>
 
-        <!-- Zone liste des restaurants -->
-        <main>
-            <div id="restaurant_list">
-                <h2>Restaurants</h2>
+            <!-- Zone liste des restaurants -->
+            <main>
+                <div id="restaurant_list">
+                    <h2>Restaurants</h2>
+
+                    <div class="restaurant_btn">
+                        <div class="restaurant_img">
+                            <a href="menu01_the_full_palette.html"><img src="images/the_full_palette.jpg" alt="The Full Palette"/></a>
+                            <div class="label_new">New</div>
+                        </div>
+                        <div class="restaurant_label">
+                            <div class="restaurant_name">
+                                <h3>The Full Palette</h3>
+                                <p>New York</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div> 
+                    </div>
+
+                    <div class="restaurant_btn">
+                        <div class="restaurant_img">
+                            <a href="menu02_the_enchanted_plate.html"><img src="images/the_enchanted_plate.jpg" alt="The Enchanted Plate"/></a>
+                            <div class="label_new">New</div>
+                        </div>
+                        <div class="restaurant_label">
+                            <div class="restaurant_name">
+                                <h3>The Enchanted Plate</h3>
+                                <p>New York</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="restaurant_btn">
                     <div class="restaurant_img">
-                        <a href="menu01_the_full_palette.html"><img src="images/the_full_palette.jpg" alt="The Full Palette"/></a>
-                        <div class="label_new">New</div>
-                    </div>
+                        <a href="menu03_bastille.html"><img src="images/bastille.jpg" alt="Bastille"/></a>
+                    </div>  
                     <div class="restaurant_label">
                         <div class="restaurant_name">
-                            <h3>The Full Palette</h3>
+                            <h3>Bastille</h3>
                             <p>New York</p>
                         </div>
                         <div class="heart">
                             <i class="far fa-heart"></i>
                         </div>
-                    </div> 
+                    </div>
                 </div>
-
+            
                 <div class="restaurant_btn">
                     <div class="restaurant_img">
-                        <a href="menu02_the_enchanted_plate.html"><img src="images/the_enchanted_plate.jpg" alt="The Enchanted Plate"/></a>
-                        <div class="label_new">New</div>
-                    </div>
-                    <div class="restaurant_label">
-                        <div class="restaurant_name">
-                            <h3>The Enchanted Plate</h3>
-                            <p>New York</p>
+                        <div>
+                            <a href="menu04_le_gourmand.html"><img src="images/le_gourmand.jpg" alt="Le Gourmand"/></a>
                         </div>
-                        <div class="heart">
-                            <i class="far fa-heart"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="restaurant_btn">
-                <div class="restaurant_img">
-                    <a href="menu03_bastille.html"><img src="images/bastille.jpg" alt="Bastille"/></a>
-                </div>  
-                <div class="restaurant_label">
-                    <div class="restaurant_name">
-                        <h3>Bastille</h3>
-                        <p>New York</p>
-                    </div>
-                    <div class="heart">
-                        <i class="far fa-heart"></i>
-                    </div>
-                </div>
-            </div>
-          
-            <div class="restaurant_btn">
-                <div class="restaurant_img">
-                    <div>
-                        <a href="menu04_le_gourmand.html"><img src="images/le_gourmand.jpg" alt="Le Gourmand"/></a>
-                    </div>
-                    <div class="restaurant_label">
-                        <div class="restaurant_name">
-                            <h3>Le Gourmand</h3>
-                            <p>New York</p>
-                        </div>
-                        <div class="heart">
-                            <i class="far fa-heart"></i>
+                        <div class="restaurant_label">
+                            <div class="restaurant_name">
+                                <h3>Le Gourmand</h3>
+                                <p>New York</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </main>
+            </main>
 
-        <!-- Zone Footer -->
-        <footer>
-            <h1>Ohmyfood</h1>
-            <p><i class="fas fa-utensils"></i> Suggest a restaurant</p>
-            <p><i class="fas fa-hands-helping"></i> Become a partner</p>
-            <div class="links">
-                <div><a href="mentions_legales.html">Legal</a></div>
-                <div><a href="mailto:ohmyfood@gmail.com">Contact</a></div>
-            </div>
-        </footer>
+            <!-- Zone Footer -->
+            <footer>
+                <h1>Ohmyfood</h1>
+                <p><i class="fas fa-utensils"></i> Suggest a restaurant</p>
+                <p><i class="fas fa-hands-helping"></i> Become a partner</p>
+                <div class="links">
+                    <div><a href="mentions_legales.html">Legal</a></div>
+                    <div><a href="mailto:ohmyfood@gmail.com">Contact</a></div>
+                </div>
+            </footer>
 
-    </div><!-- end Hompage -->
-  </body>
+        </div><!-- end Hompage -->
+    </body>
 </html>
