modif animations 16oct2020

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
                                 <p>New York</p>
                             </div>
                             <div class="heart">
-                                <i class="far fa-heart"></i>
+                                <div class="heart1">
+                                    <i class="far fa-heart"><span class="remplissage"></i>
+                                </div>
+                                <div class="heart2">
+                                    <i class="fas fa-heart"></span></i>
+                                </div>   
                             </div>
                         </div> 
                     </div>
@@ -96,7 +101,12 @@
                                 <p>New York</p>
                             </div>
                             <div class="heart">
-                                <i class="far fa-heart"></i>
+                                <div class="heart1">
+                                    <i class="far fa-heart"><span class="remplissage"></i>
+                                </div>
+                                <div class="heart2">
+                                    <i class="fas fa-heart"></span></i>
+                                </div>   
                             </div>
                         </div>
                     </div>
@@ -112,7 +122,12 @@
                             <p>New York</p>
                         </div>
                         <div class="heart">
-                            <i class="far fa-heart"></i>
+                            <div class="heart1">
+                                <i class="far fa-heart"><span class="remplissage"></i>
+                            </div>
+                            <div class="heart2">
+                                <i class="fas fa-heart"></span></i>
+                            </div>   
                         </div>
                     </div>
                 </div>
@@ -128,7 +143,12 @@
                                 <p>New York</p>
                             </div>
                             <div class="heart">
-                                <i class="far fa-heart"></i>
+                                <div class="heart1">
+                                    <i class="far fa-heart"><span class="remplissage"></i>
+                                </div>
+                                <div class="heart2">
+                                    <i class="fas fa-heart"></span></i>
+                                </div>   
                             </div>
                         </div>
                     </div>
