--- a/menu04_le_gourmand.html
+++ b/menu04_le_gourmand.html
@@ -35,7 +35,14 @@
                 <img src="images/le_gourmand.jpg" alt="Photo Le Gourmand" />
                 <div class="menu_title_label">
                     <h1>Le Gourmand</h1>
-                    <i class="far fa-heart"></i>
+                    <div class="heart">
+                        <div class="heart1">
+                            <i class="far fa-heart"><span class="remplissage"></i>
+                        </div>
+                        <div class="heart2">
+                            <i class="fas fa-heart"></span></i>
+                        </div>   
+                    </div>
                 </div>
             </div>
 
