--- a/menu01_the_full_palette.html
+++ b/menu01_the_full_palette.html
@@ -37,7 +37,14 @@
                 <img src="images/the_full_palette.jpg" alt="Photo The full palette" />
                 <div class="menu_title_label">
                     <h1>The full palette</h1>
-                    <i class="far fa-heart"></i>
+                    <div class="heart">
+                        <div class="heart1">
+                            <i class="far fa-heart"><span class="remplissage"></i>
+                        </div>
+                        <div class="heart2">
+                            <i class="fas fa-heart"></span></i>
+                        </div>   
+                    </div>
                 </div>
             </div>
 
