--- a/menu02_the_enchanted_plate.html
+++ b/menu02_the_enchanted_plate.html
@@ -35,7 +35,14 @@
                 <img src="images/the_enchanted_plate1.jpg" alt="Photo The Enchanted Plate"/>
                 <div class="menu_title_label">
                     <h1>The enchanted plate</h1>
-                    <i class="far fa-heart"></i>
+                    <div class="heart">
+                        <div class="heart1">
+                            <i class="far fa-heart"><span class="remplissage"></i>
+                        </div>
+                        <div class="heart2">
+                            <i class="fas fa-heart"></span></i>
+                        </div>   
+                    </div>
                 </div>
             </div>
 
