--- a/menu03_bastille.html
+++ b/menu03_bastille.html
@@ -35,7 +35,14 @@
                 <img src="images/bastille.jpg" alt="Photo Bastille" />
                 <div class="menu_title_label">
                     <h1>Bastille</h1>
-                    <i class="far fa-heart"></i>
+                    <div class="heart">
+                        <div class="heart1">
+                            <i class="far fa-heart"><span class="remplissage"></i>
+                        </div>
+                        <div class="heart2">
+                            <i class="fas fa-heart"></span></i>
+                        </div>   
+                    </div>
                 </div>
             </div>
 
