fix 17oct2020 fonticon MediaQuery

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
         <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
         <link rel="manifest" href="../manifest.json">
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -94,10 +94,10 @@
                             </div>
                             <div class="heart">
                                 <div class="heart1">
-                                    <i class="far fa-heart"><span class="remplissage"></i>
+                                    <i class="far fa-heart"></i>
                                 </div>
                                 <div class="heart2">
-                                    <i class="fas fa-heart"></span></i>
+                                    <i class="fas fa-heart"></i>
                                 </div>   
                             </div>
                         </div> 
@@ -115,10 +115,10 @@
                             </div>
                             <div class="heart">
                                 <div class="heart1">
-                                    <i class="far fa-heart"><span class="remplissage"></i>
+                                    <i class="far fa-heart"></i>
                                 </div>
                                 <div class="heart2">
-                                    <i class="fas fa-heart"></span></i>
+                                    <i class="fas fa-heart"></i>
                                 </div>   
                             </div>
                         </div>
@@ -136,10 +136,10 @@
                             </div>
                             <div class="heart">
                                 <div class="heart1">
-                                    <i class="far fa-heart"><span class="remplissage"></i>
+                                    <i class="far fa-heart"></i>
                                 </div>
                                 <div class="heart2">
-                                    <i class="fas fa-heart"></span></i>
+                                    <i class="fas fa-heart"></i>
                                 </div>   
                             </div>
                         </div>
@@ -157,10 +157,10 @@
                                 </div>
                                 <div class="heart">
                                     <div class="heart1">
-                                        <i class="far fa-heart"><span class="remplissage"></i>
+                                        <i class="far fa-heart"></i>
                                     </div>
                                     <div class="heart2">
-                                        <i class="fas fa-heart"></span></i>
+                                        <i class="fas fa-heart"></i>
                                     </div>   
                                 </div>
                             </div>
