--- a/order_page.html
+++ b/order_page.html
@@ -42,7 +42,7 @@
             <main>
                 <div class="legal_notice">
                     <h3>Votre commande</h3>
-                    <hr/>
+                    <p>Voici le récapitulatif de votre commande :</p>
                 </div>
             </main> 
         </div> 
